--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <form class="form-inline">
                 <img class="img-logo" src="/src/assets/images/pokeball.png" alt="pokeball">
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">¿Qué pokemon buscas?</button>
+              <button class="btn btn-outline-success my-2 my-sm-0" id="input" type="submit">¿Qué pokemon buscas?</button>
             </form>
         </div>
       </nav>
@@ -23,9 +23,47 @@
     <h1 class="title"> Pokedex </h1>
     <div id="pokemon-container" class="row row-cols-4 me-1 ">
     </div>
-    
+   
 </div>
-
+  
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/25.png" alt="">
+          <!-- Agregar grid, en una columna poner tyoes y en otra moves -->
+          <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="types">
+                      <h3>Types</h3>
+                      <div class="types-container"></div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <h3>Moves</h3>
+                    <span class="badge bg-secondary">Mega Punch</span>
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="module" src="/src/assets/js/app.js"></script>
 </body>
 </html>
