--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/styles.css"/>
-    
-    <title>Pokedex</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/styles.css" />
+
+  <title>Pokedex</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand"><img class="img-logo-pk" src="/src/assets/images/pokemon.png" alt="pokemon-logo"></a>
-            <form class="form-inline">
-                <img class="img-logo" src="/src/assets/images/pokeball.png" alt="pokeball">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" id="input" type="submit">¿Qué pokemon buscas?</button>
-            </form>
-        </div>
-      </nav>
-      <div class="container">
-    <h1 class="title"> Pokedex </h1>
-    <div id="pokemon-container" class="row row-cols-4 me-1 ">
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand">
+        <img class="img-logo-pk d-inline-block align-text-top" src="/src/assets/images/pokemon.png" alt="pokemon-logo">
+      </a>
+      <form id="searchForm" class="d-flex align-items-center">
+        <img class="img-logo me-2" src="/src/assets/images/pokeball.png" alt="pokeball">
+        <input name="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Get Pokemon</button>
+      </form>
     </div>
-   
-</div>
-  
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-  </button>
-  
+  </nav>
+  <!-- <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand">
+        
+      </a>
+      <form class="d-flex">
+        <img class="img-logo" src="/src/assets/images/pokeball.png" alt="pokeball">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" id="input" type="submit">¿Qué pokemon buscas?</button>
+      </form>
+    </div>
+  </nav> -->
+  <div class="container">
+    <h1 class="title"> Pokedex </h1>
+    <div id="pokemon-container" class="row row-cols-4"></div>
+
+  </div>
+
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -44,16 +56,16 @@
           <!-- Agregar grid, en una columna poner tyoes y en otra moves -->
           <div class="container">
             <div class="row">
-                <div class="col-6">
-                    <div class="types">
-                      <h3>Types</h3>
-                      <div class="types-container"></div>
-                    </div>
+              <div class="col-6">
+                <div class="types">
+                  <h3>Types</h3>
+                  <div class="types-container"></div>
                 </div>
-                <div class="col-6">
-                    <h3>Moves</h3>
-                    <span class="badge bg-secondary">Mega Punch</span>
-                </div>
+              </div>
+              <div class="col-6">
+                <h3>Moves</h3>
+                <div class="moves-container"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -63,7 +75,10 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="module" src="/src/assets/js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script type="module" src="/src/assets/js/app.js"></script>
 </body>
+
 </html>
