--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Arimo&family=Josefin+Sans:wght@600&family=Roboto&display=swap" rel="stylesheet">
 
-  <title>Pokedex</title>
+  <title>PoKedex</title>
 </head>
 
 <body>
@@ -21,22 +24,11 @@
       <form id="searchForm" class="d-flex align-items-center">
         <img class="img-logo me-2" src="/src/assets/images/pokeball.png" alt="pokeball">
         <input name="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Get Pokemon</button>
+        <button class="btn btn-success" type="submit">Get Pokemon</button>
       </form>
     </div>
   </nav>
-  <!-- <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand">
-        
-      </a>
-      <form class="d-flex">
-        <img class="img-logo" src="/src/assets/images/pokeball.png" alt="pokeball">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" id="input" type="submit">¿Qué pokemon buscas?</button>
-      </form>
-    </div>
-  </nav> -->
+  
   <div class="container">
     <h1 class="title"> Pokedex </h1>
     <div id="pokemon-container" class="row row-cols-4"></div>
@@ -53,7 +45,7 @@
         </div>
         <div class="modal-body">
           <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/25.png" alt="">
-          <!-- Agregar grid, en una columna poner tyoes y en otra moves -->
+          
           <div class="container">
             <div class="row">
               <div class="col-6">
