se modificaron las columnas para dispositivos pequeños

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   
   <div class="container">
     <h1 class="title"> Pokedex </h1>
-    <div id="pokemon-container" class="row row-cols-4"></div>
+    <div id="pokemon-container" class="row row-cols-2 row-cols-sm-4 row-cols-lg-6"></div>
 
   </div>
 
